<resources>
    <string name="app_name">PlanetsKT</string>
    <string name="addPlanet">Add Planet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="planet">Planet</string>
    <string name="planet_radius">Radius</string>
    <string name="planet_moons">Moons</string>
    <string name="planet_year">Year</string>
    <string name="planet_type">Type</string>
    <string name="planet_dwarf">Dwarf</string>
    <string name="name">Planet name:</string>
    <string name="radius_in_miles">Radius in miles:</string>
    <string name="number_of_moons">Number of moons:</string>
    <string name="length_of_a_year_in_days">Length of a year in days:</string>
    <string name="planet_type_hint">"Planet type: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dwarf_planet">Dwarf planet?</string>
    <string name="create_planet">Create planet</string>
    <string name="create_a_new_planet">Create a new planet:</string>
</resources>