<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlanetDetailsFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/planet_image_view"
                android:layout_width="250sp"
                android:layout_height="250sp"
                android:layout_margin="5dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_name_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_radius_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_radius"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_moons_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_moons"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_year_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_year"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_type_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_type"
                android:textAlignment="center"
                android:textSize="18sp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/planet_dwarf_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/planet_dwarf"
                android:textAlignment="center"
                android:textSize="18sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>